--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -12,6 +12,7 @@
 @import url('components/event-form.css');
 @import url('components/event-details.css');
 @import url('components/pagination.css');
+@import url('components/view-toggle.css');
 
 @import url('components/admin/layout.css');
 @import url('components/admin/navigation.css');
