--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -8,9 +8,6 @@
 @import url('components/cards.css');
 @import url('components/profile.css');
 @import url('components/auth.css');
-@import url('components/dashboard.css');
-@import url('components/event-form.css');
-@import url('components/event-details.css');
 @import url('components/pagination.css');
 @import url('components/view-toggle.css');
 
@@ -18,6 +15,10 @@
 @import url('components/admin/navigation.css');
 @import url('components/admin/tables.css');
 @import url('components/admin/forms.css');
+
+@import url('pages/events/details.css');
+@import url('pages/events/form.css');
+@import url('pages/events/my-events.css');
 
 @import url('layout/navbar.css');
 @import url('layout/hero.css');
