refactor(ui): migrate auth and profile styles to page-specific modules - Move auth.css to 'pages/account/' and profile.css to 'pages/profile/' - Refactor inputs and cards to use semantic variables (dark mode ready) - Clean up site.css imports

--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -6,8 +6,6 @@
 @import url('components/buttons.css');
 @import url('components/forms.css');
 @import url('components/cards.css');
-@import url('components/profile.css');
-@import url('components/auth.css');
 @import url('components/pagination.css');
 @import url('components/view-toggle.css');
 
@@ -15,6 +13,9 @@
 @import url('components/admin/navigation.css');
 @import url('components/admin/tables.css');
 @import url('components/admin/forms.css');
+
+@import url('pages/account/profile.css');
+@import url('pages/account/auth.css');
 
 @import url('pages/events/details.css');
 @import url('pages/events/form.css');
